2005-12-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/python/graphobject.c
	(igraphmodule_Graph_delete_vertices, igraphmodule_Graph_degree)
	(igraphmodule_Graph_betweenness, igraphmodule_Graph_bibcoupling)
	(igraphmodule_Graph_closeness, igraphmodule_Graph_cocitation)
	(igraphmodule_Graph_shortest_paths, igraphmodule_Graph_subgraph) :
	updated for new vertex set/edge set interface	

2005-12-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c
	(igraph_minimum_spanning_tree_unweighted) : FINALLY bug corrected

	* src/memory.c (igraph_free) : added 

	* src/iterators.c : completely rewritten, all functions

	* src/type_indexededgelist.c (igraph_delete_vertices)
	(igraph_degree) : updated for new vertex set interface
	* src/foreign.c (igraph_write_graph_edgelist)
	(igraph_write_graph_ncol, igraph_write_graph_lgl) : updated for
	new vertex set interface
	* src/layout.c (igraph_layout_fruchterman_reingold) : updated for
	new edge set interface
	* src/basic_query.c (igraph_are_connected) : updated for new
	vertex set interface
	* src/cocitation.c (igraph_cocitation_real, igraph_cocitation)
	(igraph_bibcoupling) : updated for new vertex/edge sets
	* src/structural_properties.c (igraph_minimum_spanning_tree_prim)
	(igraph_closeness, igraph_shortest_paths, igraph_betweenness)
	(igraph_edge_betweenness, igraph_subgraph)
	(igraph_transitivity_undirected) : updated for vertex/edge sets
	* src/conversion.c (igraph_get_adjacency, igraph_get_edgelist) :
	updated for new vertex/edge sets
	* src/attributes.c (igraph_get_vertex_attributes)
	(igraph_set_vertex_attributes) : updated for vertex/edge sets

	* examples/simple/igraph_barabasi_game.c : updated for igraph_vs_t
	* examples/simple/igraph_degree.c : updated for igraph_vs_t
	* examples/simple/igraph_delete_vertices.c : updated for igraph_vs_t

	* igraph/src/rinterface.c : updated for new vertex/edge sets
	
	* igraph/R/iterators.R : interface rewritten
